--- a/html/something/contactme.css
+++ b/html/something/contactme.css
@@ -25,7 +25,7 @@ nav button {
     padding: 10px 15px;
     margin: 10px 10px;
     font-size: 20px;
-    border-radius: 2px;
+    border-radius: 5px;
     text-align: center;
     cursor: pointer;
 }
@@ -143,4 +143,29 @@ nav button:hover {
     cursor: pointer;
     padding: 10px;
     font-size: 18px;
+    border-radius: 7px;
+}
+
+.footer {
+    height: 100px; 
+    width: 100%;
+    position: sticky;
+    left: 0;
+    bottom: 0;
+    padding-left: 100px;
+    background: linear-gradient(#060c1dbb, #060c1d 50%);
+    margin-top: 100px;
+}
+.footer hr {
+    background-color:rgb(90, 106, 148);
+    padding: 3px;
+    border: none;
+    margin-right: 100px;
+} 
+.footer img {
+    margin-top: 17px;
+    width: 35px;
+    height: auto;
+    border-radius: 7px;
+    margin-left: 10px;
 }
