--- a/html/something/something.css
+++ b/html/something/something.css
@@ -7,6 +7,7 @@
 
 body {
     background-color: rgb(6, 12, 29);
+    height: 100vh;
 }
 
 .header {
@@ -25,7 +26,7 @@ nav button {
     padding: 10px 15px;
     margin: 10px 10px;
     font-size: 20px;
-    border-radius: 2px;
+    border-radius: 5px;
     text-align: center;
     cursor: pointer;
 }
@@ -36,8 +37,7 @@ nav button:hover {
 }
 
 .aboutme_txt {
-    margin-top: 1em;
-    margin-bottom: 1em;
+    margin-top: 70px;
     text-transform: uppercase;
     font-weight: 900;
     font-style: italic;
@@ -55,13 +55,25 @@ nav button:hover {
 }
 
 .footer {
-    margin-top: 380px;
-    margin-bottom: 100px;
-    border-top: 6px solid rgb(90, 106, 148);
+    height: 100px; 
+    width: 100%;
+    position: sticky;
+    left: 0;
+    bottom: 0;
+    padding-left: 100px;
+    background: linear-gradient(#060c1dbb, #060c1d 50%);
+    margin-top: 100px;
 }
+.footer hr {
+    background-color:rgb(90, 106, 148);
+    padding: 3px;
+    border: none;
+    margin-right: 100px;
+} 
 .footer img {
-    margin-top: 20px;
+    margin-top: 17px;
     width: 35px;
     height: auto;
     border-radius: 7px;
+    margin-left: 10px;
 }
