--- a/html/portfolio/styles.css
+++ b/html/portfolio/styles.css
@@ -8,6 +8,9 @@
 body {
   font-family: basic-sans, sans-serif;
 }
+body::-webkit-scrollbar{
+  display: none;
+}
 
 /* NAVIGATION BAR & BUTTONS */
 
@@ -35,7 +38,7 @@ nav {
   float: left;
   margin-top: 17px;
   margin-left: 15px;
-  margin-right: 60px;
+  margin-right: 0px;
 }
 
 #navbar ul {
@@ -74,7 +77,7 @@ nav {
 #navbar .socialmedia img {
   width: 30px;
   float: right;
-  margin-left: 0px;
+  margin-left: 20px;
   margin-top: 20px;
   margin-right: 20px;
   border-radius: 5px;
