--- a/html/portfolio/styles.css
+++ b/html/portfolio/styles.css
@@ -57,7 +57,7 @@ nav {
 #navbar a {
   text-decoration: none;
   color: #fff;
-  width: 150px;
+  width: 120px;
   display: block;
   padding: 25px 0px;
   font-size: 15px;
@@ -72,7 +72,7 @@ nav {
   color: rgb(88, 150, 166);
 }
 
-/* SOCIAL MEDIA */
+/* SOCIAL MEDIA IN THE NAV BAR */
 
 #navbar .socialmedia img {
   width: 30px;
@@ -139,12 +139,11 @@ a#scroll-btn:before {
   100% {
     transform: translateY(2.3em);
     opacity: 0;
-
   }
 }
 a#scroll-btn:after {
   position: absolute;
-  content: "Klikk meg!";
+  content: "Scroll ned";
   width: 6em;
   display: block;
   width: 6;
@@ -190,18 +189,93 @@ a#scroll-btn:after {
   }
 }
 
+
+/* NESTE SIDE */
+
+
 #om-meg {
   height: 100vh;
-  background-color: #b9b9b9;
-  text-align: center;
+  background-color: #ffffff;
+  text-align: left;
 }
 #om-meg h1 {
-  color: #fff;
-  font-size: 50px;
-  padding-top: 40px;
+  color: rgb(88, 150, 166);
+  font-size: 70px;
+  padding-top: 90px;
   padding-bottom: 30px;
+  text-transform: uppercase;
+  filter: drop-shadow(3px 3px 2px rgba(0, 0, 0, 0.395));
+  font-family: 'Montserrat', sans-serif;
+  text-align: center;
+  position: relative;
 }
 #om-meg .aboutmetext{
   font-size: 20px;
-  color: #fff;
+  color: rgb(56, 56, 56);
+  float: right;
+  margin-right: 300px;
+  margin-top: 10%;
 }
+#om-meg .aboutmetext h3 {
+  margin-bottom: 20px;  
+}
+
+#om-meg img {
+  width: 400px;
+  margin-left: 100px;
+  filter: drop-shadow(0px 0px 6px #000000bb);
+  float: left;
+}
+
+/* SCROLL BUTTON 2 */
+
+/* #scroll-btn2 {
+  top: 0px;
+}
+a#scroll-btn2 {
+  position: absolute;
+  height: 5em;
+  width: 3.25em;
+  border: 0.2em solid #000000;
+  margin: auto;
+  left: 0;
+  right: 0;
+  bottom: 6.25em;
+  border-radius: 3em;
+}
+a#scroll-btn2:before {
+  position: absolute;
+  content: "";
+  margin: auto;
+  left: 0;
+  right: 0;
+  top: 0.5em;
+  height: 0.5em;
+  width: 0.5em;
+  background-color: #000000;
+  border-radius: 50%;
+  animation: move-down 2s infinite;
+}
+@keyframes move-down {
+  80% {
+    opacity: 0.5s;
+  }
+  100% {
+    transform: translateY(2.3em);
+    opacity: 0;
+
+  }
+}
+a#scroll-btn2:after {
+  position: absolute;
+  content: "Scroll ned";
+  width: 6em;
+  display: block;
+  width: 6;
+  text-align: center;
+  left: -2.0em;
+  bottom: -2.5em;
+  font-size: 1.6em;
+  color: #000000;
+  font-weight: 600;
+} */
