--- a/html/portfolio/styles.css
+++ b/html/portfolio/styles.css
@@ -207,22 +207,22 @@ a#scroll-btn:after {
   filter: drop-shadow(3px 3px 2px rgba(0, 0, 0, 0.395));
   font-family: 'Montserrat', sans-serif;
   text-align: center;
-  position: relative;
 }
 #om-meg .aboutmetext{
   font-size: 20px;
   color: rgb(56, 56, 56);
   float: right;
-  margin-right: 300px;
-  margin-top: 10%;
+  margin-right: 20%;
+  margin-top: 15%;
 }
 #om-meg .aboutmetext h3 {
-  margin-bottom: 20px;  
+  margin-bottom: 0; 
 }
 
 #om-meg img {
-  width: 400px;
-  margin-left: 100px;
+  margin-top: 5%;
+  width: 25%;
+  margin-left: 10%;
   filter: drop-shadow(0px 0px 6px #000000bb);
   float: left;
 }
