--- a/html/portfolio/prosjekter.css
+++ b/html/portfolio/prosjekter.css
@@ -142,6 +142,8 @@ nav {
     width: 100%;
     align-items: center;
     flex-wrap: wrap;
+    margin-left: 5%;
+    margin-top: 0%;
 }
 
 .text-col h2 {
@@ -159,9 +161,11 @@ nav {
     font-weight: bold;
 }
 
-.img-col,
-.img-col2 {
+.img-col {
     flex-basis: 50%;
+}
+.img-col img:hover {
+  transform: scale(1.5); 
 }
 .img-col img {
     display: block;
@@ -169,12 +173,7 @@ nav {
     margin: auto;
     filter: drop-shadow(0px 0px 6px #000000bb);
     border-radius: 10px;
+    margin-top: 5%;
     margin-bottom: 45px;
-}
-.img-col2 img {
-    display: block;
-    width: 90%;
-    margin: auto;
-    filter: drop-shadow(0px 0px 6px #000000bb);
-    border-radius: 10px;
+    transition: all .2s ease-in-out; 
 }
