--- a/html/portfolio/styles.css
+++ b/html/portfolio/styles.css
@@ -69,7 +69,7 @@ nav {
 #navbar a:hover {
   background: #41414158;
   border-radius: 7px;
-  color: rgb(88, 150, 166);
+  color: #5896a6;
 }
 
 /* SOCIAL MEDIA IN THE NAV BAR */
